# FlappyBird

./: CMakeLists.txt  Commits.txt
app/: CMakeLists.txt
app/include/: Bird.h  Game.h  main.h
app/src/: Bird.cpp  Game.cpp  main.cpp
